--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <h3>Designed & Developed by Sharad Kushwah</h3>
     </div>
 
+    <!-- net -->
     <!-- Custom Script -->
     <script src="./script.js"></script>
   </body>
